--- a/Bootstrap/.project
+++ b/Bootstrap/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Bootsrap</name>
+	<name>Bootstrap</name>
 	<comment></comment>
 	<projects>
 	</projects>
